--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- Link the style sheets and Google font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Andika">
-    <link rel="shortcut icon" type="image/png" href="images/pigeon-icon.png"/>
+    <link rel="shortcut icon" type="image/png" href="images/mypigeon.png"/>
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
 	  <link rel="stylesheet" type="text/css" href="css/style.css"> 
     <!-- Image by <a href="https://pixabay.com/users/chiplanay-1971251/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3303111">chiplanay</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3303111">Pixabay</a> -->
